; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_core.c_hci_conn_params_del.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_core.c_hci_conn_params_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i32 }
%struct.hci_conn_params = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"addr %pMR (type %u)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hci_conn_params_del(%struct.hci_dev* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.hci_dev*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.hci_conn_params*, align 8
  store %struct.hci_dev* %0, %struct.hci_dev** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.hci_conn_params* @hci_conn_params_lookup(%struct.hci_dev* %8, i32* %9, i32 %10)
  store %struct.hci_conn_params* %11, %struct.hci_conn_params** %7, align 8
  %12 = load %struct.hci_conn_params*, %struct.hci_conn_params** %7, align 8
  %13 = icmp ne %struct.hci_conn_params* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  br label %23

15:                                               ; preds = %3
  %16 = load %struct.hci_conn_params*, %struct.hci_conn_params** %7, align 8
  %17 = call i32 @hci_conn_params_free(%struct.hci_conn_params* %16)
  %18 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %19 = call i32 @hci_update_background_scan(%struct.hci_dev* %18)
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @BT_DBG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32* %20, i32 %21)
  br label %23

23:                                               ; preds = %15, %14
  ret void
}

declare dso_local %struct.hci_conn_params* @hci_conn_params_lookup(%struct.hci_dev*, i32*, i32) #1

declare dso_local i32 @hci_conn_params_free(%struct.hci_conn_params*) #1

declare dso_local i32 @hci_update_background_scan(%struct.hci_dev*) #1

declare dso_local i32 @BT_DBG(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
